(coq.theory
 (name Verse)
 (package verse)
 (synopsis "A EDSL to write crypto primitives")
 (modules Verse
	  Verse.Ast
	  Verse.AbstractMachine
	  Verse.AnnotatedCode
	  Verse.Error
	  Verse.FFI.Raaz
	  Verse.FFI.Raaz.Target.C
	  Verse.Language
	  Verse.Language.Macros
	  Verse.Language.Macros.BitOps
	  Verse.Language.Macros.Cache
	  Verse.Language.Macros.Loops
	  Verse.Language.Pretty
	  Verse.Language.Types
	  Verse.Machine.BitVector
	  Verse.Monad
	  Verse.BitVector
	  Verse.BitVector.Facts
	  Verse.BitVector.ArithRing
	  Verse.Monoid
	  Verse.Monoid.Interface
	  Verse.Monoid.Semantics
	  Verse.NFacts
	  Verse.Nibble
	  Verse.Print
	  Verse.Scope
	  Verse.ScopeStore
	  Verse.Target
	  Verse.Target.C
	  Verse.Target.C.Ast
	  Verse.Target.C.CodeGen
	  Verse.Target.C.Pretty
	  Verse.TestCode.AnnotatedCode
	  Verse.TypeSystem
	  Verse.CryptoLib.blake2
	  Verse.CryptoLib.blake2.c.portable
	  Verse.CryptoLib.blake2b.c.portable
	  Verse.CryptoLib.blake2s.c.portable
	  Verse.CryptoLib.chacha20.common
	  Verse.CryptoLib.chacha20.c.portable
	  Verse.CryptoLib.poly1305.c.portable
	  Verse.CryptoLib.sha2
	  Verse.CryptoLib.sha2.c.portable
	  Verse.CryptoLib.sha256.c.portable
	  Verse.CryptoLib.sha512.c.portable
	  ))
(include_subdirs qualified)
