(coq.theory
 (name Verse)
 (package verse)
 (synopsis "A EDSL to write crypto primitives")
 (modules Verse
          ; Verse.Abstract.Language
	  Verse.Abstract.Machine
          Verse.Ast
          Verse.Annotated
	  Verse.Error
          Verse.FFI.Raaz
          Verse.FFI.Raaz.Target.C
	  Verse.HlistMachine
          Verse.Language
          Verse.Language.Macros
          Verse.Language.Macros.BitOps
          Verse.Language.Macros.Cache
          Verse.Language.Macros.Loops
          Verse.Language.Pretty
	  Verse.Language.Repeat
          Verse.Language.Types
          Verse.Modular.Equation
          Verse.Modular.ModRing
          Verse.Machine.BitVector
          Verse.Monad
          Verse.BitVector
          Verse.BitVector.Facts
          Verse.BitVector.ArithRing
          Verse.BitVector.Reflection
	  Verse.Subroutine
          Verse.Monoid
          Verse.Monoid.Interface
          Verse.Monoid.Semantics
          Verse.Monoid.PList
          Verse.NFacts
          Verse.Nibble
          Verse.Print
	  Verse.ProofTac
          Verse.Scope
          Verse.Target
          Verse.Target.C
          Verse.Target.C.Ast
          Verse.Target.C.CodeGen
          Verse.Target.C.Pretty
          Verse.TestCode.AnnotatedCode
          Verse.TestCode.TestCall
          Verse.TestCode.TestSemantics

          Verse.TypeSystem
          Verse.CryptoLib.blake2
          Verse.CryptoLib.blake2.c.portable
          Verse.CryptoLib.blake2b.c.portable
          Verse.CryptoLib.blake2s.c.portable
          Verse.CryptoLib.chacha20.common
          Verse.CryptoLib.chacha20.c.portable
          Verse.CryptoLib.poly1305.c.portable
          Verse.CryptoLib.sha2
          Verse.CryptoLib.sha2.c.portable
          Verse.CryptoLib.sha256.c.portable
          Verse.CryptoLib.sha512.c.portable
          Verse.CryptoLib.curve25519.c.field
          Verse.CryptoLib.curve25519.c.portable
          Verse.Utils.hlist
          ))
(include_subdirs qualified)
